--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -84,8 +84,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon">&#xe613;</i> 审批</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="/node/approval/{$Think.session.admin.id}">我的审批</a></dd>
-                        <dd><a href="/approval/user/{$Think.session.admin.id}">我发起的审批</a></dd>
+                        <dd><a href="/node/approval/{$Think.session.admin.id}">我审批的</a></dd>
+                        <dd><a href="/approval/user/{$Think.session.admin.id}">我发起的</a></dd>
                         <dd><a href="javascript:;">未通过的审批</a></dd>
                         <dd><a href="/approval/all">全部审批</a></dd>
                         <dd><a href="/approval/add">新建审批</a></dd>
